# fsm_variant

./: CMakeLists.txt  README.md  fsm_variant.hpp  main.cpp
samples/jtag/: CMakeLists.txt  main.cpp
vfsm/: vfsm.hpp
